<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtvAdicionarGasto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAdicionarGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="@string/addGasto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao"/>

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor"/>

        <EditText
            android:id="@+id/editValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:ems="10"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"/>

        <EditText
            android:id="@+id/editData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_gasto"/>

        <Spinner
            android:id="@+id/spinTipoGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:entries="@array/tipo_gasto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"/>

        <Spinner
            android:id="@+id/spinCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fornecedor"/>

        <Spinner
            android:id="@+id/spinEstabelecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt" />

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:onClick="adicionar"
            android:text="@string/adicionar" />

    </LinearLayout>

</ScrollView>