<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="30dp"        >

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alterar_conta"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/userNameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nome de Usuario"
            android:inputType="textPersonName"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/phoneNumberRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Numero de Telefone"
            android:inputType="textPersonName"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/edtRenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Renda"
            android:inputType="numberDecimal"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="202dp"
            android:layout_height="41dp"
            android:onClick="voltar"
            android:text="@string/voltar"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnFinishRegister"
            android:layout_width="202dp"
            android:layout_height="41dp"
            android:onClick="btnAlterar"
            android:text="@string/btnAlterar"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>