<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AtvVerGastos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_gastos"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/despesa"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/valor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/data"
                android:textSize="18sp" />

        </TableRow>

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Despesa 1"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="R$ 50,00"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="30/08/20"
                android:textSize="14sp" />
        </TableRow>

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Despesa 2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="R$ 20,00"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="02/09/20"
                android:textSize="14sp" />
        </TableRow>

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000"/>
    </TableLayout>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <View android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000000"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gasto Mensal:"
                    android:layout_marginRight="5dp"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/txtValorGastoMensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R$ 20.00"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Saldo Mensal:"
                    android:layout_marginRight="5dp"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/txtValorSaldoMensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R$ 30.00"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Renda Mensal:"
                    android:layout_marginRight="5dp"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/txtValorRendaMensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R$ 50.00"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gasto Total:"
                    android:layout_marginRight="5dp"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/txtValorGastoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R$ 70.00"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>